# AccelomtryFoundationModel

ukb-ttm-accelerometry/: DATA_SCRIPTS_GUIDE.md  INSTALL.md  INSTALLATION_UPDATES.md  README.md  example_pipeline.py  install.sh  install_colab.py  pyproject.toml  quick_demo.sh  requirements.txt  test_basic.py
ukb-ttm-accelerometry/conf/: base.yaml  finetune.yaml  scratch.yaml
ukb-ttm-accelerometry/docs/: UKB_DATA_ACCESS.md
ukb-ttm-accelerometry/scripts/: download_ukb_data.py  generate_demo_data.py  ingest_nhanes_80hz.sh  ingest_nhanes_80hz_python.sh  ingest_nhanes_minute.py  make_splits.py  make_splits_nhanes.py  prepare_ukb.py
ukb-ttm-accelerometry/src/configs/: nhanes_80hz.yaml  nhanes_minute.yaml
ukb-ttm-accelerometry/src/dataio/: datasets.py  preprocess.py  ukb_cwa_reader.py  windowing.py
ukb-ttm-accelerometry/src/dataio/nhanes/: __init__.py  convert_80hz_to_parquet.py  datasets_nhanes.py  download_80hz.R  download_nhanes.py  merge_clinical.py  nonwear.py  parse_80hz.py  parse_80hz_xpt.py  parse_minute.py
ukb-ttm-accelerometry/src/utils/: io.py  seed.py  time_features.py
ukb-ttm-accelerometry/tests/: test_nhanes_80hz.py  test_nhanes_minute.py  test_preprocess.py  test_windowing.py
